--- a/index1.html
+++ b/index1.html
@@ -86,7 +86,7 @@
   </div>
 
   <br>
- <a href="file:///C:/Users/Yyykt/Downloads/.html/jogo_curiosidades_paises.html"> <button onclick="window.location.href='index.html'">Voltar à Página Inicial</button></a>
+ <a "> <button onclick="window.location.href='index.html'">Voltar à Página Inicial</button></a>
 
   <script>
     function checkAnswer(questionName, resultId) {
@@ -115,3 +115,4 @@
   </script>
 </body>
 </html>
+
